Implement Balance.priority comparison to trigger COA disconnect on addBucketBalance and addBucketListBalance
If the incoming balance has a higher priority (lower priority number) than any existing non-expired balance, send COA disconnect after updating cache so the session renegotiates with the new higher-priority balance.

https://claude.ai/code/session_018yfPF4pucpscKCN2NpZapR